--- a/LZW/lzwCompression/lzwCompression.1
+++ b/LZW/lzwCompression/lzwCompression.1
@@ -3,11 +3,11 @@
 .\"man mdoc.samples for a complete listing of options
 .\"man mdoc for the short list of editing options
 .\"/usr/share/misc/mdoc.template
-.Dd 6/18/14               \" DATE 
-.Dt LZW 1      \" Program name and manual section number 
+.Dd 3/5/14               \" DATE 
+.Dt lzwCompression 1      \" Program name and manual section number 
 .Os Darwin
 .Sh NAME                 \" Section Header - required - don't modify 
-.Nm LZW,
+.Nm lzwCompression,
 .\" The following lines are read in generating the apropos(man -k) database. Use only key
 .\" words here as the database is built based on the words here and in the .ND line. 
 .Nm Other_name_for_same_program(),
